# guardspine-connector-template

./: .gitignore  README.md  config.example.yaml  package.json  pyproject.toml
connector/: __init__.py  base.py  bundle_emitter.py  events.py
examples/: github_connector.py
src/: connector.ts  guardspine-kernel.d.ts  types.ts
